--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="./static?file=index.css">
 </head>
 <body>
     <div class="main"></div>
@@ -12,6 +13,7 @@
     var es = function(sel) {return Array.from(document.querySelectorAll(sel))}
     var log = function(...arg) {console.log.apply(console, arg)}
 </script>
+
 <script src="https://cdn.bootcss.com/pixi.js/4.5.3/pixi.min.js"></script>
 <script src="./static?file=utils/ajax.js"></script>
 <script src="./static?file=index.js"></script>
