拆成了每个元素独立画布

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
 
 <script src="https://cdn.bootcss.com/pixi.js/4.5.3/pixi.min.js"></script>
 <script src="./static?file=utils/ajax.js"></script>
+<script src="./static?file=utils/draw.js"></script>
 <script src="./static?file=index.js"></script>
 
 </body>
